tests/diag/call-trace.id
defn level3 x -> add x :not-a-number
defn level2 x -> add (level3 x) 1
defn level1 x -> add (level2 x) 1
level1 1
